load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load(":platform.bzl", "declare_config_settings")

package(default_visibility = ["//visibility:public"])

declare_config_settings()

package_group(
    name = "function_transition_allowlist",
    packages = [
        "//...",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["**/*.bzl"]),
    visibility = ["//rust:__subpackages__"],
)

alias(
    name = "rules",
    actual = ":bzl_lib",
    deprecation = "Please use the `@rules_rust//platform:bzl_lib` target instead",
    visibility = ["//rust:__subpackages__"],
)
